# nrel-pipes

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  model_run_template.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  script.sh  setup.cfg  setup.py  team-creation.toml  testing.py  tox.ini  z.py
.github/workflows/: pypi_release.yaml
example_data/dataset/: checkin_dataset.toml
example_data/model/: create_model.toml
examples/: README.md
examples/hero_task_basic/: controller.py  run.py  worker.py
ls/cli/: cli.py  dataset.py  model.py  pipeline.py  task.py
ls/config/: session.py
ls/utils/: cli.py  client.py  template.py
nrel_pipes/: __init__.py  auth.py  session.py
nrel_pipes/cli/: config.py  dataset.py  login.py  model.py  modelrun.py  project.py  projectrun.py  server.py  task.py  team.py  user.py
nrel_pipes/client/: auth.py  base.py  dataset.py  project.py  projectrun.py  task.py
nrel_pipes/sdk/: __init__.py  auth.py  core.py  task_engine.py
nrel_pipes/template/: utils.py
p/: __init__.py
p/cli/: main.py
p/client/: base.py  dataset.py  project.py
p/sdk/: core.py
p/utils/: __init__.py  common.py
pipes/: __init__.py  auth.py  core.py  session.py  utils.py
pipes/cli/: __init__.py  config.py  dataset.py  login.py  main.py  model.py  pipeline.py  project.py  projectrun.py  server.py  task.py  team.py  template.py
pipes/client/: __init__.py  (+10 more)
pipes_cmd/: __init__.py
pipes_sdk/: __init__.py  auth.py  client.py  taskEngine.py
wrapper/: __init__.py
(+66 files in other folders)
